samples/_failures_safe/1761347594_3cd2c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_df7cbfab.c: In function ‘main’:
./samples/SAFE/__tmp_df7cbfab.c:154:9: error: expected declaration or statement at end of input
  154 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_df7cbfab.c:154:9: error: expected declaration or statement at end of input
